cabal-version:   3.8
name:            plutus-script-utils
version:         1.4.0.0
license:         Apache-2.0
license-files:
  LICENSE
  NOTICE

maintainer:      konstantinos.lambrou@iohk.io
author:          Konstantinos Lambrou-Latreille
homepage:        https://github.com/input-output-hk/plutus-apps#readme
bug-reports:     https://github.com/input-output-hk/plutus-apps/issues
synopsis:        Helper/utility functions for writing Plutus scripts.
description:     Helper/utility functions for writing Plutus scripts.
category:        Language
build-type:      Simple
extra-doc-files: README.adoc

common lang
  default-language:   Haskell2010
  default-extensions:
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    EmptyDataDeriving
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NumericUnderscores
    OverloadedStrings
    PolyKinds
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns

  -- See Plutus Tx readme for why we need the following flags:
  -- -fobject-code -fno-ignore-interface-pragmas and -fno-omit-interface-pragmas
  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wnoncanonical-monad-instances
    -Wno-unused-packages -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints -Widentities
    -Wmissing-import-lists -Wno-missed-extra-shared-lib -fobject-code
    -fno-ignore-interface-pragmas -fignore-hpc-changes
    -fno-omit-interface-pragmas -fplugin-opt
    PlutusTx.Plugin:target-version=1.1.0 -fplugin-opt
    PlutusTx.Plugin:defer-errors -fplugin-opt
    PlutusTx.Plugin:conservative-optimisation

  -- The limitation of plutus-tx-plugin
  if (impl(ghc <9.6) || impl(ghc >=9.7))
    buildable: False

library
  import:           lang
  hs-source-dirs:   src
  default-language: Haskell2010
  exposed-modules:
    Plutus.Script.Utils.Address
    Plutus.Script.Utils.Data
    Plutus.Script.Utils.Scripts
    Plutus.Script.Utils.V1
    Plutus.Script.Utils.V1.Contexts
    Plutus.Script.Utils.V1.Generators
    Plutus.Script.Utils.V1.Scripts
    Plutus.Script.Utils.V1.Typed
    Plutus.Script.Utils.V2
    Plutus.Script.Utils.V2.Contexts
    Plutus.Script.Utils.V2.Generators
    Plutus.Script.Utils.V2.Scripts
    Plutus.Script.Utils.V2.Typed
    Plutus.Script.Utils.V3.Contexts
    Plutus.Script.Utils.V3.Scripts
    Plutus.Script.Utils.V3.Typed.Scripts
    Plutus.Script.Utils.V3.Typed.Scripts.MultiPurpose
    Plutus.Script.Utils.Value
    Prettyprinter.Extras

  -- The limitation of plutus-tx-plugin
  if (impl(ghc <9.6) || impl(ghc >=9.7))
    buildable: False

  --------------------------
  -- Other IOG dependencies
  --------------------------
  build-depends:
    , cardano-api          ^>=10.12
    , cardano-ledger-core
    , plutus-core          >=1.0.0
    , plutus-ledger-api    >=1.0.0
    , plutus-tx            >=1.0.0
    , plutus-tx-plugin     >=1.0.0

  ------------------------
  -- Non-IOG dependencies
  ------------------------
  build-depends:
    , aeson
    , base           >=4.9 && <5
    , bytestring
    , data-default
    , mtl
    , optics-core
    , prettyprinter
    , serialise
    , tagged

  -- TODO This needs to be changed to 1.35 once cardano-node creates the tag
  ghc-options:      -fprint-potential-instances

test-suite plutus-script-utils-tests
  import:             lang
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  hs-source-dirs:     test
  default-language:   Haskell2010
  default-extensions: ImportQualifiedPost

  ------------------------
  -- Non-IOG dependencies
  ------------------------
  build-depends:
    , base   >=4.9 && <5
    , tasty
