cabal-version:      3.4
name:               twa-cooked-scripts
version:            0.0.0
author:             Tweag IO
maintainer:         victor.miraldo, guillaume.genestier, georg.rudoy

library
    exposed-modules:
      TWA.CookedScripts

    build-depends:
      base >= 4.9 && < 5,
      aeson,
      bytestring,
      containers,
      data-default,
      either,
      freer-extras,
      freer-simple,
      lens,
      playground-common,
      plutus-contract,
      plutus-ledger,
      plutus-ledger-api,
      plutus-pab,
      plutus-tx,
      plutus-tx-plugin,
      plutus-use-cases,
      scientific,
      tasty,
      text,
      streaming,
      plutus-core,
      flat,
      foldl,
      mtl
    hs-source-dirs: src
    default-language: Haskell2010
    ghc-options:
      -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
      -fplugin-opt PlutusTx.Plugin:defer-errors

