cabal-version: 3.4

name:           bettinggame
version:        0.0.0
build-type:     Simple

library
  exposed-modules:
      BettingGame
      BettingGame.Endpoints
      BettingGame.OffChain
  hs-source-dirs:
      src
  ghc-options: -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
  build-depends:
      aeson
    , base >=4.9 && <5
    , cooked-validators
    , data-default
    , playground-common
    , plutus-contract
    , plutus-core
    , plutus-ledger
    , plutus-ledger-api
    , plutus-pab
    , plutus-script-utils
    , plutus-tx
    , plutus-tx-plugin
    , plutus-use-cases
  default-language: Haskell2010

test-suite spec
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      BettingGameSpec
  hs-source-dirs:
      tests
  build-depends:
      base >=4.9 && <5
    , bettinggame
    , cooked-validators
    , data-default
    , plutus-contract
    , plutus-core
    , plutus-ledger
    , plutus-ledger-api
    , plutus-pab
    , plutus-script-utils
    , plutus-tx
    , plutus-tx-plugin
    , plutus-use-cases
    , tasty
    , tasty-hunit
  default-language: Haskell2010
